@@ -315,6 +315,7 @@ public class ProgrammingExerciseBuildConfig extends DomainObject {
      *
      * @return a {@link DockerRunConfig} object initialized with the parsed flags, or {@code null} if an error occurs
      */
+    @Nullable
     public DockerRunConfig getDockerRunConfig() {
         if (StringUtils.isBlank(dockerFlags)) {
             return null;
@@ -326,19 +327,19 @@ public class ProgrammingExerciseBuildConfig extends DomainObject {
             List<List<String>> list = objectMapper.readValue(dockerFlags, new TypeReference<>() {
             });
 
-            DockerRunConfig dockerRunConfig = new DockerRunConfig();
+            boolean networkDisabled = false;
+            List<String> env = null;
             for (List<String> entry : list) {
-                if (entry.size() != 2 || entry.get(0) == null || entry.get(1) == null || entry.get(0).isBlank() || entry.get(1).isBlank()
-                        || !DockerRunConfig.AllowedDockerFlags.isAllowed(entry.get(0))) {
+                if (entry.size() != 2 || StringUtils.isBlank(entry.get(1)) || StringUtils.isBlank(entry.get(0)) || !DockerRunConfig.AllowedDockerFlags.isAllowed(entry.get(0))) {
                     log.warn("Invalid Docker flag entry: {}. Skipping.", entry);
                     continue;
                 }
                 switch (entry.get(0)) {
                     case "network":
-                        dockerRunConfig.setNetworkDisabled(entry.get(1).equalsIgnoreCase("none"));
+                        networkDisabled = entry.get(1).equalsIgnoreCase("none");
                         break;
                     case "env":
-                        dockerRunConfig.setEnv(parseEnvVariableString(entry.get(1)));
+                        env = parseEnvVariableString(entry.get(1));
                         break;
                     default:
                         log.error("Invalid Docker flag entry: {}. Skipping.", entry);
@@ -346,7 +347,7 @@ public class ProgrammingExerciseBuildConfig extends DomainObject {
                 }
 
             }
-            return dockerRunConfig;
+            return new DockerRunConfig(networkDisabled, env);
         }
         catch (Exception e) {
             log.error("Failed to parse DockerRunConfig from JSON string: {}. Using default settings.", dockerFlags, e);
